# llamacpp-kt

./: README.md  fma.md  googleapi.md  memo.md
llama.cpp-b3821/: llama_cpp-tsuzumi.patch
llama.cpp-b3821/common/: common.cpp
llama.cpp-b3821/examples/llama.android/: build.gradle.kts
llama.cpp-b3821/examples/llama.android/app/src/main/java/com/example/llama/: ChatMessage.kt  Downloadable.kt  MainActivity.kt  MainViewModel.kt
llama.cpp-b3821/examples/llama.android/llama/src/main/cpp/: CMakeLists.txt  llama-android.cpp
llama.cpp-b3821/examples/llama.android/llama/src/main/java/android/llama/cpp/: LLamaAndroid.kt
llama.cpp-b3821/include/: llama.h
